# claude-app-server

./: Cargo.toml  README.md  package.json
.github/workflows/: release-npm.yml
app-server/: Cargo.toml
app-server-protocol/: Cargo.toml
app-server-protocol/src/: jsonrpc_lite.rs  lib.rs
app-server-protocol/src/protocol/: common.rs  mod.rs
app-server-protocol/src/protocol/v2/: apps.rs  item.rs  mod.rs  model.rs  thread.rs  turn.rs
app-server-transport/: Cargo.toml
app-server-transport/src/: lib.rs  outgoing_message.rs
app-server-transport/src/transport/: auth.rs  mod.rs  stdio.rs  unix_socket.rs  websocket.rs
app-server/src/: claude_runner.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  request_processors.rs  thread_state.rs
app-server/src/request_processors/: apps_processor.rs  initialize_processor.rs  model_processor.rs  thread_processor.rs  turn_processor.rs
scripts/: build_npm_package.py  stage_npm_packages.py
