[workspace]
members = [
    "app-server",
    "app-server-protocol",
    "app-server-transport",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.3"
futures = "0.3"
hex = "0.4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.27"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }

claude-app-server-protocol = { path = "app-server-protocol" }
claude-app-server-transport = { path = "app-server-transport" }
