[package]
name = "claude-app-server-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "claude_app_server_transport"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
claude-app-server-protocol = { workspace = true }
constant_time_eq = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
