[package]
name = "claude-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claude-app-server"
path = "src/main.rs"

[lib]
name = "claude_app_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
claude-app-server-protocol = { workspace = true }
claude-app-server-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
